# japanese-learning-tools

./: .gitignore  .gitmodules  .nxignore  Cargo.toml  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.json
.changelog/: CHANGELOG.md  tmp
.github/actions/build-application/: action.yml
.github/actions/build-cli/: action.yml
.github/actions/build-kanji-scanner/: action.yml
.github/actions/build-web-extention/: action.yml
.github/workflows/: release.yml  tag-release.yml
.svelte-kit/: ambient.d.ts
act/: pr-event.json
apps/browser-extension/: .eslintrc.json  index.html  package.json  project.json  tsconfig.app.json  vite.config.ts
apps/browser-extension/src/: jellyfin-subs.ts
apps/browser-extension/src/app/: app.element.spec.ts  app.element.ts
apps/browser-native-messanger/: Cargo.toml  project.json
apps/browser-native-messanger/src/: main.rs
apps/browser-native-messenger/: Cargo.toml  README.md  install_manifests.ps1  install_manifests.sh  project.json
apps/browser-native-messenger/manifest/: manifest-chrome.json  manifest-firefox.json
apps/desktop-app/: package.json  project.json  vite.config.js
apps/desktop-app/src/: app.css
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/capabilities/: default.json  linux.json  windows.json
apps/desktop-app/src-tauri/src/: lib.rs
apps/desktop-app/src/lib/: commands.ts  kanji-bank.ts  manifest-installer.ts  menu.ts
apps/desktop-app/src/routes/: +layout.svelte  +page.svelte
apps/desktop-backend/: project.json  tauri.conf.json
apps/desktop-frontend/: package.json  project.json  svelte.config.js  vite.config.ts
apps/desktop-frontend/src/routes/: +layout.svelte
apps/gd-sudachi/: .gitignore  README.md  project.json  pyproject.toml
apps/gd-sudachi/gd-sudachi/: gd-sudachi.py  kanji_bank.py  sudachi_helper.py
apps/gd-sudachi/gd_sudachi/: __init__.py  kanji_bank.py  main.py  run.py  sudachi_helper.py  sudachi_mapping.py
apps/gd-sudachi/tests/: test_gd_sudachi.py
apps/gd-sudachi/tests/mocks/: kanji-bank.json
apps/gd-tools/: .gitignore  Cargo.toml  README.md  build.rs  install.sh  project.json
apps/gd-tools/src/: anki_search.rs  echo.rs  images.rs  kana_conv.rs  main.rs  marisa_split.rs  massif.rs  mecab_split.rs  tests.rs  translate.rs  util.rs
apps/gd-tools/src/marian_mt/: mod.rs
apps/jp-learning-tools/: README.md  package.json  project.json  tsconfig.json  vite.config.js
apps/jp-learning-tools/src/: app.css  app.html
apps/jp-learning-tools/src-tauri/: Cargo.toml  tauri.conf.json
apps/jp-learning-tools/src-tauri/capabilities/: default.json  macos.json  region-selector.json  windows.json
apps/jp-learning-tools/src-tauri/src/: lib.rs  main.rs
apps/jp-learning-tools/src-tauri/windows/fragments/: registry.wxs
apps/jp-learning-tools/src/components/: Alert.svelte
apps/jp-learning-tools/src/lib/: ankiApi.ts  commands.ts  date.ts  manifest-installer.ts  menu.ts
apps/jp-learning-tools/src/routes/: +layout.svelte  +page.svelte
apps/jp-learning-tools/src/stores/: alertState.svelte.ts  kanjiBank.svelte.ts  settings.svelte.ts  statusState.svelte.ts
apps/kanji-scanner/: .gitignore  README.md  flutter_launcher_icons.yaml  pigeon.dart  project.json  pubspec.yaml
apps/kanji-scanner/android/app/: build.gradle.kts
apps/kanji-scanner/integration_test/: simple_test.dart
apps/kanji-scanner/ios/Runner/: Info.plist
apps/kanji-scanner/ios/Runner.xcodeproj/: project.pbxproj
apps/kanji-scanner/lib/: main.dart  navigation.dart
apps/kanji-scanner/lib/core/: env.dart  messages.g.dart  utils.dart
apps/kanji-scanner/rust/: Cargo.toml
apps/kanji-scanner/rust/src/: frb_generated.rs
apps/kanji-scanner/rust/src/api/: mod.rs  sudachi_api.rs
apps/kanji-scanner/rust/sudachi/: Cargo.toml
apps/kanji-scanner/rust/sudachi/src/: lib.rs
apps/kanji-scanner/rust/sudachi/src/dic/: character_category.rs  mod.rs
apps/kanji-scanner/rust/sudachi/src/dic/lexicon/: word_infos.rs
apps/kanji-scanner/rust/sudachi/src/input_text/buffer/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/: loader.rs
apps/kanji-scanner/rust/sudachi/src/plugin/input_text/default_input_text/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/input_text/ignore_yomigana/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/input_text/prolonged_sound_mark/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/oov/regex_oov/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/path_rewrite/join_katakana_oov/: mod.rs
apps/kanji-scanner/rust/sudachi/src/plugin/path_rewrite/join_numeric/: mod.rs
apps/kanji-scanner/rust_builder/: pubspec.yaml
apps/kanji-scanner/rust_builder/android/: build.gradle  settings.gradle
apps/kanji-scanner/test/: widget_test.dart
apps/subs2clipboard/: manifest.json  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/subs2clipboard-native-messenger/: Cargo.toml  README.md  install_manifests.ps1  install_manifests.sh  project.json
apps/subs2clipboard-native-messenger/manifest/: manifest-chrome.json  manifest-firefox.json
apps/subs2clipboard-native-messenger/src/: main.rs  sudachi.rs
apps/subs2clipboard/src/: background.ts  content-debug.ts  jellyfin-subs.ts  sudachi.ts  types.ts
apps/subs2clipboard/src/lib/: index.ts  (+3 more)
scripts/: release.ts  rename-binary.ts
(+76 files in other folders)
