[package]
name = "gd-tools"
version = "0.1.0"
edition = "2021"
authors = ["Ajatt-Tools"]
description = "A set of programs to enhance GoldenDict for immersion learning"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html-escape = "0.2"
url = "2.5"
regex = "1.9"
image = "0.25"
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.21"
dirs = "5.0"
trie-rs = { version = "0.4.2", optional = true } # For trie-based word segmentation

[features]
default = ["marisa"]
marisa = ["dep:trie-rs"]

[package.metadata.bundle]
name = "gd-tools"
identifier = "com.example.gd-tools"
resources = ["path/to/mecab-ipadic-neologd"]

[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
depends = ["mecab", "libmecab-dev"]
assets = [
    ["path/to/mecab-ipadic-neologd", "/usr/lib/mecab/dic/mecab-ipadic-neologd"],
    ["target/release/gd-tools", "/usr/bin/gd-tools"]
]

[package.metadata.wix]
license = "path/to/LICENSE"
binaries = [
    { path = "target/release/gd-tools.exe", name = "gd-tools" }
]
assets = [
    { path = "path/to/mecab-ipadic-neologd", destination = "C:\\Program Files\\gd-tools\\mecab-ipadic-neologd" }
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
