[package]
name = "gd-tools"
version = "0.1.1"
edition = "2024"
authors = ["NicolasNewman, Ajatt-Tools"]
description = "A set of programs to enhance GoldenDict for immersion learning"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html-escape = "0.2"
url = "2.5"
regex = "1.9"
image = "0.25"
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.21"
dirs = "5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
