[package]
name = "gd-tools"
version = "0.2.0"
edition.workspace = true
authors = ["NicolasNewman, Ajatt-Tools"]
description = "A set of programs to enhance GoldenDict for immersion learning"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html-escape = "0.2"
url = "2.5"
regex = "1.9"
image = "0.25"
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.21"
dirs = "5.0"
hf-hub = "0.4.3"
tokenizers = "0.21.4"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1"}
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1"}
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.9.1"}