[package]
name = "subs2clipboard-native-messenger"
version = "0.2.2"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
