[package]
name = "jp-learning-tools-backend"
build = "build.rs"
version = "0.10.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jp_learning_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
xcap = "0.8.1"
oar-ocr = { version = "0.6.1", features = ["cuda"] }
image = "0.25.5"
tokio = { version = "1.49.0", features = ["rt"] }

[dev-dependencies]
image = "0.25.5"
imageproc = "0.25.0"
